fix overflow css problem in choropleth form

--- a/app/styles/editor_ui/upfront-forms.less
+++ b/app/styles/editor_ui/upfront-forms.less
@@ -8,6 +8,10 @@
     margin: 5px;
   }
 
+  input[type=file] {
+    max-width: 250px;
+  }
+
   &.centered {
     text-align: center;
   }
